add ore gen